--- a/index.html
+++ b/index.html
@@ -11,6 +11,48 @@
       <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <!--Creating a side nav bar-->
+        <div class="sidebar">
+            <i class="fab fa-twitter"></i>
+            <div class="sidebarOption active">
+                <span class="material-icons"> home </span>
+                <h2>Home</h2>
+            </div>
 
+            <div class="sidebarOption active">
+                <span class="material-icons"> search </span>
+                <h2>Explore</h2>
+            </div>
+
+            <div class="sidebarOption active">
+                <span class="material-icons"> notifications_none </span>
+                <h2>Notifications</h2>
+            </div>
+
+            <div class="sidebarOption active">
+                <span class="material-icons"> mail_outline </span>
+                <h2>Messages</h2>
+            </div>
+
+            <div class="sidebarOption active">
+                <span class="material-icons"> bookmark_border </span>
+                <h2>Bookmarks</h2>
+            </div>
+
+            <div class="sidebarOption active">
+                <span class="material-icons"> list_alt </span>
+                <h2>Lists</h2>
+            </div>
+
+            <div class="sidebarOption active">
+                <span class="material-icons"> perm_identity </span>
+                <h2>Profile</h2>
+            </div>
+
+            <div class="sidebarOption active">
+                <span class="material-icons"> more_horiz </span>
+                <h2>More</h2>
+            </div>
+        </div>
     </body>
 </html>
