created tweet button

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <span class="material-icons"> more_horiz </span>
                 <h2>More</h2>
             </div>
+            <button class="sidebar_tweet">Tweet</button>
         </div>
     </body>
 </html>
