edited app.js, auth.html, auth.js

--- a/auth.html
+++ b/auth.html
@@ -20,6 +20,6 @@
     <input id="pinnumber">
     <button type="button" onclick="authorize()">Authorize</button>
 
-    <script type = "text/javascript" src="public/auth.js"></script>
+    <script type = "text/javascript" src="auth.js"></script>
     </body>
 </html>
