updated index and css

--- a/index.html
+++ b/index.html
@@ -55,5 +55,21 @@
             </div>
             <button class="sidebar_tweet">Tweet</button>
         </div>
+        <!--Twitter feed-->
+        <div class="feed">
+            <div class="feed_header">
+                <h2>Home</h2>
+            </div>
+            <!--Tweet box to post-->
+            <div class="tweetBox">
+                <form>
+                    <div class="tweetbox_input">
+                        <img src="https://i.pinimg.com/originals/a6/58/32/a65832155622ac173337874f02b218fb.png" alt="" >
+                        <input type="text" placeholder="Create a post here!" >
+                    </div>
+                    <button class="tweetBox_tweetButton">Tweet</button>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
