Created Authorization Process

--- a/auth.html
+++ b/auth.html
@@ -17,8 +17,8 @@
     <button type="button" id="auth_button">Get Link</button> 
     <p id="auth_link"> &lt;insert text here&gt;</p>
   
-    <input id="pinnumber">
-    <button type="button" onclick="authorize()">Authorize</button>
+    <input id="pin_number">
+    <button type="button" id="pin_button">Authorize</button>
 
     <script type = "text/javascript" src="auth.js"></script>
     </body>
