--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- I got help from https://youtu.be/TSsPAOmTFsM -->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -62,6 +64,7 @@
             </div>
             <!--Tweet box to post-->
             <div class="tweetBox">
+
                 <form>
                     <div class="tweetbox_input">
                         <img src="https://i.pinimg.com/originals/a6/58/32/a65832155622ac173337874f02b218fb.png" alt="" >
@@ -69,6 +72,30 @@
                     </div>
                     <button class="tweetBox_tweetButton">Tweet</button>
                 </form>
+
+            <div class="post_body">
+                <div class="post_header">
+                    <div class="post_headerText">
+                        <h3>Amanda Candies 
+                            <span class="post_headerSpecial">
+                                <span class="material-icons post_badge"> verified </span>@Acandy
+                            </span>
+                        </h3>
+                    </div>
+                    <div class="post_headerDescription">
+                       <p>
+                        I go to Columbus State University and I major in Information Technology.
+                       </p> 
+                    </div>
+                </div>
+                <img src="https://dbukjj6eu5tsf.cloudfront.net/sidearm.sites/columbusstate.sidearmsports.com/images/responsive_2018/main_logo.svg" alt="Image of a cougar" />
+
+                <div>
+                    <span class="material-icons"> repeat </span>
+                    <span class="material-icons"> favorite_border </span>
+                    <span class="material-icons"> publish </span>
+                </div>
+            </div>
             </div>
         </div>
     </body>
