--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <script src="app.js"></script>
         <!--Creating a side nav bar-->
         <div class="sidebar">
             <i class="fab fa-twitter"></i>
