--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <input type="text" placeholder="Find Someone" />
                 </div>
                 <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
-                    Single toggle
+                    <span class="material-icons">dark_mode</span>
                   </button>
                 <div class="widgets_widgetContainer">
                     <h3>What's New!</h3>
