--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
       <link rel="stylesheet" href="style.css">
+    
     </head>
     <body>
         <script src="app.js"></script>
@@ -104,7 +105,8 @@
                     <span class="material-icons widgets_searchIcon">search</span>
                     <input type="text" placeholder="Find Someone" />
                 </div>
-                <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
+               
+                <button type="button" "btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
                     <span class="material-icons">dark_mode</span>
                   </button>
                 <div class="widgets_widgetContainer">
