Post and Delete Tweet Operations Working

--- a/auth.html
+++ b/auth.html
@@ -14,11 +14,8 @@
     <h3>
         Authorization
     </h3>
-    <button type="button" id="auth_button">Get Link</button> 
-    <p id="auth_link"> &lt;insert text here&gt;</p>
-  
-    <input id="pin_number">
-    <button type="button" id="pin_button">Authorize</button>
+    <br>
+    <button type="button" id="login_button">Login</button>
 
     <script type = "text/javascript" src="auth.js"></script>
     </body>
