--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </div>
                     <button class="tweetBox_tweetButton">Tweet</button>
                     <label for="deleteId">Enter ID:</label>
-                    <input type="text" id="deleteId" name="deleteId><br><br>
+                    <input type="text" id="deleteId" name="deleteId" style="width: 200px;"><br><br>
                 </form>
 
             <div class="post_body">
