--- a/index.html
+++ b/index.html
@@ -32,42 +32,37 @@
             <i class="fab fa-twitter"></i>
             <div class="sidebarOption active">
                 <span class="material-icons"> home </span>
-                <h2>Home</h2>
+                <a class="navlink" href="https://www.w3schools.com/">Home</a>
             </div>
 
             <div class="sidebarOption active">
                 <span class="material-icons"> search </span>
-                <h2>Explore</h2>
+                <a class="navlink" href="https://www.Youtube.com/">Explore</a>
             </div>
 
             <div class="sidebarOption active">
                 <span class="material-icons"> notifications_none </span>
-                <h2>Notifications</h2>
+                <a class="navlink" href="https://www.Youtube.com/">Notifications</a>
             </div>
 
             <div class="sidebarOption active">
                 <span class="material-icons"> mail_outline </span>
-                <h2>Messages</h2>
+                <a class="navlink" href="https://www.Youtube.com/">Messages</a>
             </div>
 
             <div class="sidebarOption active">
                 <span class="material-icons"> bookmark_border </span>
-                <h2>Bookmarks</h2>
-            </div>
-
-            <div class="sidebarOption active">
-                <span class="material-icons"> list_alt </span>
-                <h2>Lists</h2>
+                <a class="navlink" href="https://www.Youtube.com/">Bookmarks</a>
             </div>
 
             <div class="sidebarOption active">
                 <span class="material-icons"> perm_identity </span>
-                <h2>Profile</h2>
+                <a class="navlink" href="https://www.Youtube.com/">Profile</a>
             </div>
 
             <div class="sidebarOption active">
                 <span class="material-icons"> more_horiz </span>
-                <h2>More</h2>
+                <a class="navlink" href="https://www.Youtube.com/">More</a>
             </div>
             <button class="sidebar_tweet">Tweet</button>
         </div>
