--- a/index.html
+++ b/index.html
@@ -42,27 +42,27 @@
 
             <div class="sidebarOption active">
                 <span class="material-icons"> notifications_none </span>
-                <a class="navlink" href="https://www.Youtube.com/">Notifications</a>
+                <a class="navlink" href="https://www.columbusstate.edu/">Notifications</a>
             </div>
 
             <div class="sidebarOption active">
                 <span class="material-icons"> mail_outline </span>
-                <a class="navlink" href="https://www.Youtube.com/">Messages</a>
+                <a class="navlink" href="https://www.tiktok.com/en/">Messages</a>
             </div>
 
             <div class="sidebarOption active">
                 <span class="material-icons"> bookmark_border </span>
-                <a class="navlink" href="https://www.Youtube.com/">Bookmarks</a>
+                <a class="navlink" href="https://www.google.com/">Bookmarks</a>
             </div>
 
             <div class="sidebarOption active">
                 <span class="material-icons"> perm_identity </span>
-                <a class="navlink" href="https://www.Youtube.com/">Profile</a>
+                <a class="navlink" href="https://stackoverflow.com/">Profile</a>
             </div>
 
             <div class="sidebarOption active">
                 <span class="material-icons"> more_horiz </span>
-                <a class="navlink" href="https://www.Youtube.com/">More</a>
+                <a class="navlink" href="https://www.poptropica.com/">More</a>
             </div>
             <button class="sidebar_tweet">Tweet</button>
         </div>
