--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <script src="app.js"></script>
         <!--Creating a side nav bar-->
         <div class="sidebar">
             <i class="fab fa-twitter"></i>
@@ -66,7 +65,6 @@
             <!--Tweet box to post-->
             <div class="tweetBox">
 
-                <form>
                     <div class="tweetbox_input">
                         <img src="https://i.pinimg.com/originals/a6/58/32/a65832155622ac173337874f02b218fb.png" alt="" >
                         <input type="text" id="tweet_content" placeholder="Create a post here!" rows="6" cols="50" maxlength="280">
@@ -78,7 +76,6 @@
                     <br>
                     <input type="submit" id="delete_button" value="Delete">
                     <p id="delete_response"></p>
-                </form>
 
             <div class="post_body">
                 <div class="post_header">
@@ -115,7 +112,7 @@
                   </button>
                 <div class="widgets_widgetContainer">
                     <h3>What's New!</h3>
-                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Sunsets don&#39;t get much better than this one over <a href="https://twitter.com/GrandTetonNPS?ref_src=twsrc%5Etfw">@GrandTetonNPS</a>. <a href="https://twitter.com/hashtag/nature?src=hash&amp;ref_src=twsrc%5Etfw">#nature</a> <a href="https://twitter.com/hashtag/sunset?src=hash&amp;ref_src=twsrc%5Etfw">#sunset</a> <a href="http://t.co/YuKy2rcjyU">pic.twitter.com/YuKy2rcjyU</a></p>&mdash; US Department of the Interior (@Interior) <a href="https://twitter.com/Interior/status/463440424141459456?ref_src=twsrc%5Etfw">May 5, 2014</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Sunsets don&#39;t get much better than this one over <a href="https://twitter.com/GrandTetonNPS?ref_src=twsrc%5Etfw">@GrandTetonNPS</a>. <a href="https://twitter.com/hashtag/nature?src=hash&amp;ref_src=twsrc%5Etfw">#nature</a> <a href="https://twitter.com/hashtag/sunset?src=hash&amp;ref_src=twsrc%5Etfw">#sunset</a> <a href="http://t.co/YuKy2rcjyU">pic.twitter.com/YuKy2rcjyU</a></p>&mdash; US Department of the Interior (@Interior) <a href="https://twitter.com/Interior/status/463440424141459456?ref_src=twsrc%5Etfw">May 5, 2014</a></blockquote>
                 </div>
             </div>
         <script type = "text/javascript" src="manage.js"></script>
