--- a/index.html
+++ b/index.html
@@ -18,42 +18,37 @@
             <i class="fab fa-twitter"></i>
             <div class="sidebarOption active">
                 <span class="material-icons"> home </span>
-                <h2>Home</h2>
+                <a class="navlink" href="https://www.w3schools.com/">Home</a>
             </div>
 
             <div class="sidebarOption active">
                 <span class="material-icons"> search </span>
-                <h2>Explore</h2>
+                <a class="navlink" href="https://www.Youtube.com/">Explore</a>
             </div>
 
             <div class="sidebarOption active">
                 <span class="material-icons"> notifications_none </span>
-                <h2>Notifications</h2>
+                <a class="navlink" href="https://www.columbusstate.edu/">Notifications</a>
             </div>
 
             <div class="sidebarOption active">
                 <span class="material-icons"> mail_outline </span>
-                <h2>Messages</h2>
+                <a class="navlink" href="https://www.tiktok.com/en/">Messages</a>
             </div>
 
             <div class="sidebarOption active">
                 <span class="material-icons"> bookmark_border </span>
-                <h2>Bookmarks</h2>
-            </div>
-
-            <div class="sidebarOption active">
-                <span class="material-icons"> list_alt </span>
-                <h2>Lists</h2>
+                <a class="navlink" href="https://www.google.com/">Bookmarks</a>
             </div>
 
             <div class="sidebarOption active">
                 <span class="material-icons"> perm_identity </span>
-                <h2>Profile</h2>
+                <a class="navlink" href="https://stackoverflow.com/">Profile</a>
             </div>
 
             <div class="sidebarOption active">
                 <span class="material-icons"> more_horiz </span>
-                <h2>More</h2>
+                <a class="navlink" href="https://www.poptropica.com/">More</a>
             </div>
             <button class="sidebar_tweet">Tweet</button>
         </div>
@@ -77,21 +72,7 @@
                     <input type="submit" id="delete_button" value="Delete">
                     <p id="delete_response"></p>
 
-            <div class="post_body">
-                <div class="post_header">
-                    <div class="post_headerText">
-                        <h3>Amanda Candies 
-                            <span class="post_headerSpecial">
-                                <span class="material-icons post_badge"> verified </span>@Acandy
-                            </span>
-                        </h3>
-                    </div>
-                    <div class="post_headerDescription">
-                       <p>
-                        I go to Columbus State University and I major in Information Technology.
-                       </p> 
-                    </div>
-                </div>
+            
                 <img src="https://dbukjj6eu5tsf.cloudfront.net/sidearm.sites/columbusstate.sidearmsports.com/images/responsive_2018/main_logo.svg" alt="Image of a cougar" />
 
                 <div>
